--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "StaticPage",
+  "name": "MyStaticPage_adm",
   "version": "0.0.1",
   "author": "TonyXiao",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-contrib-connect": "~0.6.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compress": "~0.5.1",
     "grunt-contrib-jshint": "~0.6.0",
@@ -14,6 +15,7 @@
     "grunt-contrib-watch": "~0.5.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-imageoptim": "^1.4.1",
+    "load-grunt-tasks": "~0.3.0",
     "time-grunt": "^0.2.9",
     "grunt-ftp-deploy": "^0.1.2",
     "grunt-contrib-htmlmin": "^0.2.0",
